add content to my resume page

--- a/resume.html
+++ b/resume.html
@@ -218,7 +218,87 @@ $(document).ready(function () {
 </div>
 
 
-
+<div id="yueming-kou" class="section level1">
+<h1>Yueming Kou</h1>
+<hr />
+<p>Email: <a href="mailto:yk2826@cumc.columbia.edu">yk2826@cumc.columbia.edu</a></p>
+<p>Tel: 6464966814</p>
+<hr />
+<div id="education" class="section level2">
+<h2>Education</h2>
+<dl>
+<dt>2018-2020 (expected)</dt>
+<dd><p><strong>MS, Biostatistics</strong>; Columbia University in the City of Newyork</p>
+<p><em>Track: Theory and Methods</em></p>
+</dd>
+<dt>2014-2018</dt>
+<dd><p><strong>BS, Food Science and Engineering</strong>; Jiangnan University</p>
+<p><em>GPA: 3.76 / 4.00</em></p>
+</dd>
+</dl>
+</div>
+<div id="professional-knowledge" class="section level2">
+<h2>Professional knowledge</h2>
+<dl>
+<dt>Main courses</dt>
+<dd>Data Science, Biostatistical methods, Probability, Epidemiology
+</dd>
+</dl>
+<p><strong>Programming language:</strong> R, Python, VB</p>
+<p><strong>Statistical software:</strong> SPSS</p>
+</div>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
+<p><strong>Yellow River Shandong Bureau</strong></p>
+<p>Filled in and verified statistical tables of water conservancy project, water supply engineering, soil and water conservation as well as drainage of rivers and lakes through management information system.</p>
+</div>
+<div id="academic-experience" class="section level2">
+<h2>Academic Experience</h2>
+<p><strong>Anti-inflammatory properties of potato extracts in stimulated Raw 264.7 mouse macrophages</strong></p>
+<p><strong>Advisor:</strong> Prof. Haitao Li</p>
+<ul>
+<li>Prepared potato extracts;</li>
+<li>Cultured and sub-cultured RAW 264.7 cells in DMEM media supplemented with 10% FBS;</li>
+<li>Treated cells with specific concentrations of potato extracts for 2h then induced NO production and cytokines IL-6 production with LPS; measured NO production; measured the release of the cytokines IL-6;</li>
+<li>Analyzed the data with SPSS using one-way ANOVA and the result showed that the potato extracts have inhibitory effects on NO production and reduce cytokines IL-6 production;</li>
+<li>Studied the optimal concentration of potato extracts by Western Blot analysis and the result showed that 0.1mg/ml potato extracts had the best anti-inflammatory effects.</li>
+</ul>
+<p><strong>The Effect of Black Pepper on High-fat Diet-induced Obese Mice</strong></p>
+<p><strong>Advisor:</strong> Prof. Haitao Li</p>
+<ul>
+<li>Designed and performed animal experiments: maintained C57BL/6J mice (n = 40; 5-week-old); randomly divided the mice into four groups of 10 animals as follows: normal diet, HFD, HFD in combination with black pepper or piperine for 13 weeks; measured body weight and food consumption three times per week throughout the study; calculated food efficiency ratio(FER);</li>
+<li>Performed an oral glucose tolerance test; assayed blood glucose using a glucose meter;</li>
+<li>Collected blood samples from each mouse and obtained plasma by centrifuging the blood; assayed plasma insulin and adiponectin levels using a mouse-specific ELISA kit;</li>
+<li>Removed and weighed the livers;</li>
+<li>Analyzed data describing body weight gains, liver weights and plasma characteristics with SPSS using one-way ANOVA and the result showed that black pepper reduces body and liver weights as well as improves glucose utilisation and insulin sensitivity;</li>
+<li>Coauthored Anti-obesity effect of black pepper on high-fat diet-induced obese mice. Under review by Journal of Agricultural and Food Chemistry.</li>
+</ul>
+</div>
+<div id="extracurricular-activities" class="section level2">
+<h2>Extracurricular Activities</h2>
+<ul>
+<li>Took part in China Undergraduate Mathematical Contest in Modeling in 2016</li>
+<li>Served as psychological committee member for caring about students’ mental health</li>
+<li>Acted as an international class monitor of School of Food Science and Technology and also a volunteer for receiving visiting scholars and exchange students</li>
+</ul>
+</div>
+<div id="awards-and-interests" class="section level2">
+<h2>Awards and Interests</h2>
+<ul>
+<li><strong>Jiangnan University</strong> First-class Scholarship (Twice, ratio: 1/30)</li>
+<li>Outstanding Winner of “YuanXiang Scholarship”: aiming at rewarding students who stand out in the study abroad, overseas study tour, as well as academic study
+<ul>
+<li>Bonus: 25000RMB/per year</li>
+<li>Ratio: selected two students among the whole school students</li>
+</ul></li>
+<li><strong>Interests</strong>
+<ul>
+<li>Good at studying dietary recipe</li>
+<li>Be fond of playing the violin</li>
+</ul></li>
+</ul>
+</div>
+</div>
 
 
 
